[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-bot-identification"
version = "0.1.0"
description = "Short description"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Trevor Smith" }]
dependencies = [
  "torch",
  "pandas",
  "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]
